0.4.6
Attempted network buffering fixes.
Fix leading spaces in M3U favorites import.
F2 will let you update a station.

0.4.5
Fix legacy volume bugs.

0.4.4
Add an option to make playback rate adjust by semitones instead of .01X
Add a use legacy volume adjustment checkbox to advanced, for those who don't care about volume affecting recordings and want it to respond quickly.
Add an option to not show track filenames in the window title.
In addition to this, improve window title display so that it shows much more useful track information than before.
Fix the scheduler so that when set to both playback and recording, the audio is now correctly muted.
Add an import button to the radio dialog, for importing M3U or pls streams.
Add the promised search tab to the radio dialog, which lets you search RadioBrowser, TuneIn, iHeart Radio.
Adjust rate feature to not rely on the tempo algorithm being BassFX/Sound Touch.
Fix pasting into the playlist view.
Load folders from m3u's.

0.4.3
Add scheduler for scheduling playback/recording from within the app!
Fix a bug report where now playing song titles didn't continue parsing past an apostrophe character.
Add a keystroke, u, to mute the player. This works in such a way where recording the player would still work but you wouldn't hear the player output.
Add backspace to reset the current effect slider to it's default value.
Adjust it so that player volume does not affect recording volume.
More adjustments to volume curve.
Add volume step setting to options/playback.

0.4.2
Add convolution reverb.
Add all files option to the open file dialog.
Add chapter seeking option.
in the speak now playing key, remove the now playing: text
Make it so shift numbers show a text field in a dialog with the tag that that number key would speak.
Add open folder option