@@ -65,10 +65,11 @@ BEGIN
     COMBOBOX        IDC_REMEMBER_POS, 145, 90, 118, 120, CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     AUTOCHECKBOX    "&Bring window to front when opening files", IDC_BRING_TO_FRONT, 17, 112, 180, 10
     AUTOCHECKBOX    "&Load all files in folder when opening single file", IDC_LOAD_FOLDER, 17, 132, 200, 10
-    AUTOCHECKBOX    "&Minimize to system tray", IDC_MINIMIZE_TO_TRAY, 17, 152, 120, 10
-    LTEXT           "&Volume step:", -1, 17, 172, 50, 10
-    COMBOBOX        IDC_VOLUME_STEP, 70, 170, 80, 120, CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    AUTOCHECKBOX    "Show &track name in window title", IDC_SHOW_TITLE, 17, 192, 150, 10
+    AUTOCHECKBOX    "&Minimize to system tray", IDC_MINIMIZE_TO_TRAY, 17, 147, 120, 10
+    AUTOCHECKBOX    "Show &track name in window title", IDC_SHOW_TITLE, 17, 162, 150, 10
+    AUTOCHECKBOX    "Auto-&advance to next playlist item", IDC_AUTO_ADVANCE, 17, 177, 150, 10
+    LTEXT           "&Volume step:", -1, 160, 162, 50, 10
+    COMBOBOX        IDC_VOLUME_STEP, 215, 160, 55, 120, CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
 
     // Recording tab controls (shown when tab 1 selected)
     LTEXT           "Record audio output to file. Press R to toggle recording.", -1, 17, 30, 230, 10
