@@ -2,6 +2,8 @@
 Attempted network buffering fixes.
 Fix leading spaces in M3U favorites import.
 F2 will let you update a station.
+Fix youtube search
+Add an auto advance to next playlist item option to playback tab.
 
 0.4.5
 Fix legacy volume bugs.
